- Intro screens - menu drawer

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -27,6 +29,12 @@
         <activity android:name=".ui.payment.NewPaymentActivity"
             android:label="@string/send_payment"
             android:windowSoftInputMode="stateAlwaysHidden"/>
+
+        <activity
+            android:name=".ui.intro.IntroActivity"
+            android:theme="@style/Theme.Intro" />
+
+
     </application>
 
 </manifest>
