--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,8 @@ dependencies {
 
 
     compile project(path: ':LoginView2')
+
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
@@ -49,5 +51,7 @@ dependencies {
     compile 'org.osmdroid:osmdroid-android:5.6.5'
     compile 'com.github.MKergall:osmbonuspack:6.3'
     compile 'agency.tango.android:material-intro-screen:0.0.5'
+    compile 'com.edwardvanraak:MaterialBarcodeScanner:0.0.6-ALPHA'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
 }
