--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'me.tatarka.retrolambda'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion "25.0.2"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "net.mercadosocial.moneda"
         minSdkVersion 15
@@ -53,5 +53,6 @@ dependencies {
     compile 'agency.tango.android:material-intro-screen:0.0.5'
     compile 'com.edwardvanraak:MaterialBarcodeScanner:0.0.6-ALPHA'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
     testCompile 'junit:junit:4.12'
 }
