--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,16 +2,15 @@ apply plugin: 'com.android.application'
 apply plugin: 'me.tatarka.retrolambda'
 
 android {
-    compileSdkVersion 25
+    compileSdkVersion 26
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "net.mercadosocial.moneda"
         minSdkVersion 15
-        targetSdkVersion 25
+        targetSdkVersion 26
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
 
     }
     buildTypes {
@@ -25,22 +24,14 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
-        exclude group: 'com.android.support', module: 'support-annotations'
-    })
-
-
-
-
-
 
     compile project(path: ':LoginView2')
 
 
-    compile 'com.android.support:appcompat-v7:25.3.1'
-    compile 'com.android.support:design:25.3.1'
-    compile 'com.android.support:support-vector-drawable:25.3.1'
-    compile 'com.android.support:support-v13:25.3.1'
+    compile 'com.android.support:appcompat-v7:26.0.2'
+    compile 'com.android.support:design:26.0.2'
+    compile 'com.android.support:support-vector-drawable:26.1.0'
+    compile 'com.android.support:support-v13:26.0.2'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
@@ -48,13 +39,20 @@ dependencies {
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.7'
-    compile 'com.android.support:support-v4:25.3.1'
+    compile 'com.android.support:support-v4:26.0.2'
     compile 'org.osmdroid:osmdroid-android:5.6.5'
     compile 'com.github.MKergall:osmbonuspack:6.3'
     compile 'agency.tango.android:material-intro-screen:0.0.5'
-    compile 'com.edwardvanraak:MaterialBarcodeScanner:0.0.6-ALPHA'
+//    compile 'com.edwardvanraak:MaterialBarcodeScanner:0.0.6-ALPHA'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
     testCompile 'junit:junit:4.12'
     compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
+    compile 'com.github.GrenderG:Toasty:1.2.8'
+
+    compile 'com.google.firebase:firebase-messaging:11.6.2'
+
 }
+
+apply plugin: 'com.google.gms.google-services'
+
