--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_mes_v2_144"
         android:label="@string/app_name"
+        android:name=".App"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
@@ -23,28 +24,40 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".ui.entity_info.EntityInfoActivity" />
-
         <activity
-            android:name=".ui.payment.NewPaymentActivity"
+            android:name=".ui.payment_old.NewPaymentActivity_Old"
             android:label="@string/send_payment"
             android:windowSoftInputMode="stateAlwaysHidden" />
-
         <activity
             android:name=".ui.intro.IntroActivity"
             android:theme="@style/Theme.Intro" />
-
         <activity
             android:name=".ui.recipient_select.RecipientSelectActivity"
             android:label="@string/select_recipient"
             android:windowSoftInputMode="stateAlwaysHidden" />
-
-        <activity android:name=".ui.auth.login.LoginActivity"
+        <activity
+            android:name=".ui.auth.login.LoginActivity"
             android:windowSoftInputMode="stateAlwaysHidden" />
-
-        <activity android:name=".ui.auth.register.RegisterActivity"
+        <activity
+            android:name=".ui.auth.register.RegisterActivity"
             android:windowSoftInputMode="stateAlwaysHidden" />
+        <activity android:name=".ui.new_payment.NewPaymentActivity"></activity>
+
+
+        <!-- [START firebase_service] -->
+        <service android:name=".messaging.MyFirebaseMessagingService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+        <!-- [END firebase_service] -->
+        <!-- [START firebase_iid_service] -->
+        <service android:name=".messaging.MyFirebaseInstanceIDService">
+            <intent-filter>
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
