--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     compile 'com.github.MKergall:osmbonuspack:6.3'
     compile 'agency.tango.android:material-intro-screen:0.0.5'
 //    compile 'com.edwardvanraak:MaterialBarcodeScanner:0.0.6-ALPHA'
+    implementation 'com.budiyev.android:code-scanner:1.7.5'
+    compile 'com.karumi:dexter:4.2.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
     testCompile 'junit:junit:4.12'
@@ -52,6 +54,7 @@ dependencies {
 
     compile 'com.google.firebase:firebase-messaging:11.6.2'
 
+    compile project(path: ':materialbarcodescanner')
 }
 
 apply plugin: 'com.google.gms.google-services'
