--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
     compile 'com.github.GrenderG:Toasty:1.2.8'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
     compile 'com.google.firebase:firebase-messaging:11.6.2'
 
