--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.main.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,7 +25,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.entity_info.EntityInfoActivity" />
+        <activity android:name=".ui.entity_info.EntityInfoActivity"
+            android:label="@string/entity_info"/>
         <activity
             android:name=".ui.payment_old.NewPaymentActivity_Old"
             android:label="@string/send_payment"
