--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,11 @@
             </intent-filter>
         </service>
 
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCmb9WAN4IbBbjPQdFtZEUvubMcP-tDa7g"/>
+
+
     </application>
 
 </manifest>
