--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,8 @@ allprojects {
         jcenter()
         mavenCentral()
         maven {
-            url "https://jitpack.io"}
+            url "https://jitpack.io"
+        }
         google()
         maven {
             url 'https://maven.google.com/'
