--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,25 +34,30 @@ dependencies {
     compile 'com.android.support:appcompat-v7:26.0.2'
     compile 'com.android.support:design:26.0.2'
     compile 'com.android.support:support-vector-drawable:26.1.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v13:26.0.2'
+    compile 'com.android.support:support-v4:26.0.2'
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
     compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
     compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.7'
-    compile 'com.android.support:support-v4:26.0.2'
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'org.osmdroid:osmdroid-android:6.0.1'
     compile 'com.github.MKergall:osmbonuspack:6.3'
     compile 'agency.tango.android:material-intro-screen:0.0.5'
     compile 'com.karumi:dexter:4.2.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
     testCompile 'junit:junit:4.12'
+
+
     compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
     compile 'com.github.GrenderG:Toasty:1.2.8'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    compile 'jp.wasabeef:recyclerview-animators:2.3.0'
 
     compile 'com.google.firebase:firebase-messaging:11.8.0'
     compile 'com.google.android.gms:play-services-places:11.8.0'
