--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
     <application
         android:name=".App"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_app_mes"
+        android:icon="@mipmap/ic_app_mes_only_circle"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -29,10 +29,6 @@
         <activity
             android:name=".ui.entity_info.EntityInfoActivity"
             android:label="@string/entity_info" />
-        <activity
-            android:name=".ui.payment_old.NewPaymentActivity_Old"
-            android:label="@string/send_payment"
-            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".ui.intro.IntroActivity"
             android:theme="@style/Theme.Intro" />
