--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.1'
+        classpath 'com.android.tools.build:gradle:3.1.0'
         classpath 'me.tatarka:gradle-retrolambda:3.2.4'
         classpath 'com.google.gms:google-services:3.2.0'
         classpath 'io.fabric.tools:gradle:1.24.4'
@@ -31,6 +31,9 @@ allprojects {
         google()
         maven {
             url 'https://maven.google.com/'
+        }
+        maven {
+            url 'https://maven.fabric.io/public'
         }
 
 
