--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,54 +26,54 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile project(path: ':LoginView2')
+    implementation project(path: ':LoginView2')
 
 
-    compile 'com.android.support:appcompat-v7:26.0.2'
-    compile 'com.android.support:design:26.0.2'
-    compile 'com.android.support:support-vector-drawable:26.1.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:support-v13:26.0.2'
-    compile 'com.android.support:support-v4:26.0.2'
+    implementation 'com.android.support:appcompat-v7:26.0.2'
+    implementation 'com.android.support:design:26.0.2'
+    implementation 'com.android.support:support-vector-drawable:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation 'com.android.support:support-v13:26.0.2'
+    implementation 'com.android.support:support-v4:26.0.2'
     
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
-    compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
+    implementation 'com.squareup.okhttp:logging-interceptor:2.6.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.1.7'
+    implementation 'io.reactivex:rxandroid:1.2.1'
+    implementation 'io.reactivex:rxjava:1.1.7'
 
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'org.osmdroid:osmdroid-android:6.0.1'
-    compile 'com.github.MKergall:osmbonuspack:6.3'
-    compile 'agency.tango.android:material-intro-screen:0.0.5'
-    compile 'com.karumi:dexter:4.2.0'
-    compile 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
-    testCompile 'junit:junit:4.12'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
+    implementation 'org.osmdroid:osmdroid-android:6.0.1'
+    implementation 'com.github.MKergall:osmbonuspack:6.3'
+    implementation 'agency.tango.android:material-intro-screen:0.0.5'
+    implementation 'com.karumi:dexter:4.2.0'
+    implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
+    testImplementation 'junit:junit:4.12'
 
 
-    compile 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
-    compile 'com.github.GrenderG:Toasty:1.2.8'
-    compile 'jp.wasabeef:recyclerview-animators:2.3.0'
-    compile 'com.github.scottyab:showhidepasswordedittext:0.8'
+    implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
+    implementation 'com.github.GrenderG:Toasty:1.2.8'
+    implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
+    implementation 'com.github.scottyab:showhidepasswordedittext:0.8'
 
-    compile 'com.google.firebase:firebase-messaging:11.8.0'
-    compile 'com.google.android.gms:play-services-places:11.8.0'
-    compile('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
+    implementation 'com.google.firebase:firebase-messaging:11.8.0'
+    implementation 'com.google.android.gms:play-services-places:11.8.0'
+    implementation('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
         transitive = true
     }
-    compile 'com.google.firebase:firebase-core:11.8.0'
+    implementation 'com.google.firebase:firebase-core:11.8.0'
 
-    compile 'com.android.support:multidex:1.0.1'
+    implementation 'com.android.support:multidex:1.0.1'
 
     implementation 'com.budiyev.android:code-scanner:1.7.5'
-    compile 'com.github.kenglxn.QRGen:android:2.4.0'
+    implementation 'com.github.kenglxn.QRGen:android:2.4.0'
 
-    compile project(path: ':materialbarcodescanner')
+    implementation project(path: ':materialbarcodescanner')
 }
 
 apply plugin: 'com.google.gms.google-services'
