--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "net.mercadosocial.moneda"
         minSdkVersion 17
         targetSdkVersion 26
-        versionCode 178
-        versionName "1.78"
+        versionCode 181
+        versionName "1.81"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true //important
@@ -37,7 +37,7 @@ dependencies {
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:support-v13:26.0.2'
     implementation 'com.android.support:support-v4:26.0.2'
-    
+
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
@@ -74,7 +74,8 @@ dependencies {
     implementation 'com.github.kenglxn.QRGen:android:2.4.0'
 
     implementation project(path: ':materialbarcodescanner')
+
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
 }
 
 apply plugin: 'com.google.gms.google-services'
-
