--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "net.mercadosocial.moneda"
         minSdkVersion 17
         targetSdkVersion 26
-        versionCode 181
-        versionName "1.81"
+        versionCode 183
+        versionName "1.83"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true //important
@@ -55,6 +55,8 @@ dependencies {
     implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
     testImplementation 'junit:junit:4.12'
 
+    implementation 'com.malinskiy:superrecyclerview:1.1.4'
+
 
     implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
     implementation 'com.github.GrenderG:Toasty:1.2.8'
@@ -76,6 +78,12 @@ dependencies {
     implementation project(path: ':materialbarcodescanner')
 
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
+
+    // Lifecycles only (no ViewModel or LiveData)
+    implementation "android.arch.lifecycle:runtime:1.1.1"
+    implementation "android.arch.lifecycle:extensions:1.1.1"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
+
 }
 
 apply plugin: 'com.google.gms.google-services'
