--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,8 +10,8 @@ android {
         applicationId "net.mercadosocial.moneda"
         minSdkVersion 17
         targetSdkVersion 26
-        versionCode 183
-        versionName "1.83"
+        versionCode 188
+        versionName "1.88"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true //important
@@ -31,12 +31,12 @@ dependencies {
     implementation project(path: ':LoginView2')
 
 
-    implementation 'com.android.support:appcompat-v7:26.0.2'
-    implementation 'com.android.support:design:26.0.2'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:support-vector-drawable:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v13:26.0.2'
-    implementation 'com.android.support:support-v4:26.0.2'
+    implementation 'com.android.support:support-v13:26.1.0'
+    implementation 'com.android.support:support-v4:26.1.0'
 
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
@@ -63,12 +63,15 @@ dependencies {
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
     implementation 'com.github.scottyab:showhidepasswordedittext:0.8'
 
-    implementation 'com.google.firebase:firebase-messaging:11.8.0'
-    implementation 'com.google.android.gms:play-services-places:11.8.0'
+    implementation 'com.google.android.gms:play-services-vision:12.0.0'
+    implementation 'com.google.android.gms:play-services-places:12.0.0'
+
     implementation('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
         transitive = true
     }
-    implementation 'com.google.firebase:firebase-core:11.8.0'
+
+    implementation 'com.google.firebase:firebase-core:12.0.0'
+    implementation 'com.google.firebase:firebase-messaging:12.0.0'
 
     implementation 'com.android.support:multidex:1.0.1'
 
@@ -85,5 +88,6 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:1.1.1"
 
 }
+
 
 apply plugin: 'com.google.gms.google-services'
