--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,17 @@
 apply plugin: 'com.android.application'
-apply plugin: 'me.tatarka.retrolambda'
+//apply plugin: 'me.tatarka.retrolambda'
 apply plugin: 'io.fabric'
 
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion '27.0.3'
+    compileSdkVersion 28
+    buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "net.mercadosocial.moneda"
         minSdkVersion 17
-        targetSdkVersion 26
-        versionCode 189
-        versionName "1.89"
+        targetSdkVersion 28
+        versionCode 193
+        versionName "1.93Poz"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true //important
@@ -22,6 +22,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 
 }
 
@@ -31,27 +35,30 @@ dependencies {
     implementation project(path: ':LoginView2')
 
 
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
-    implementation 'com.android.support:support-vector-drawable:26.1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:support-vector-drawable:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.android.support:support-v13:26.1.0'
-    implementation 'com.android.support:support-v4:26.1.0'
+    implementation 'com.android.support:support-v13:28.0.0'
+    implementation 'com.android.support:support-v4:28.0.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava:2.3.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
     implementation 'com.squareup.okhttp:logging-interceptor:2.6.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'io.reactivex:rxandroid:1.2.1'
-    implementation 'io.reactivex:rxjava:1.1.7'
+    implementation 'io.reactivex:rxjava:1.3.0'
+//    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+//    implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'org.osmdroid:osmdroid-android:6.0.1'
     implementation 'com.github.MKergall:osmbonuspack:6.3'
     implementation 'agency.tango.android:material-intro-screen:0.0.5'
-    implementation 'com.karumi:dexter:4.2.0'
+    implementation 'com.karumi:dexter:5.0.0'
     implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
     testImplementation 'junit:junit:4.12'
 
@@ -59,21 +66,21 @@ dependencies {
 
 
     implementation 'com.ToxicBakery.viewpager.transforms:view-pager-transforms:1.2.32'
-    implementation 'com.github.GrenderG:Toasty:1.2.8'
+    implementation 'com.github.GrenderG:Toasty:1.3.0'
     implementation 'jp.wasabeef:recyclerview-animators:2.3.0'
     implementation 'com.github.scottyab:showhidepasswordedittext:0.8'
 
-    implementation 'com.google.android.gms:play-services-vision:12.0.0'
-    implementation 'com.google.android.gms:play-services-places:12.0.0'
+    implementation 'com.google.android.gms:play-services-vision:11.8.0'
+    implementation 'com.google.android.gms:play-services-places:16.0.0'
 
-    implementation('com.crashlytics.sdk.android:crashlytics:2.7.1@aar') {
+    implementation('com.crashlytics.sdk.android:crashlytics:2.9.6') {
         transitive = true
     }
 
-    implementation 'com.google.firebase:firebase-core:12.0.0'
-    implementation 'com.google.firebase:firebase-messaging:12.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.5'
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
 
-    implementation 'com.android.support:multidex:1.0.1'
+    implementation 'com.android.support:multidex:1.0.3'
 
     implementation 'com.budiyev.android:code-scanner:1.7.5'
     implementation 'com.github.kenglxn.QRGen:android:2.4.0'
