--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         android:icon="@mipmap/ic_app_mes_only_circle"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_app_mes_only_circle"
+        android:networkSecurityConfig="@xml/security"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
