--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,18 @@
 
 buildscript {
     repositories {
-        jcenter()
         google()
         maven {
             url 'https://maven.fabric.io/public'
         }
+        jcenter()
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.1.3'
+        classpath 'com.android.tools.build:gradle:3.2.0'
         classpath 'me.tatarka:gradle-retrolambda:3.2.4'
         classpath 'com.google.gms:google-services:4.0.1'
-        classpath 'io.fabric.tools:gradle:1.24.4'
+        classpath 'io.fabric.tools:gradle:1.+'
 
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -23,7 +23,6 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
         mavenCentral()
         maven {
             url "https://jitpack.io"
@@ -36,6 +35,7 @@ allprojects {
             url 'https://maven.fabric.io/public'
         }
 
+        jcenter()
 
     }
 }
