--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,10 +22,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
 
-//        debug {
-//            applicationIdSuffix ".debug"
-//            versionNameSuffix " debug"
-//        }
+        debug {
+            applicationIdSuffix ".debug"
+            versionNameSuffix " debug"
+        }
     }
     compileOptions {
         sourceCompatibility = '1.8'
