--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_app_mes_only_circle"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_app_mes_only_circle"
         android:networkSecurityConfig="@xml/security"
+        android:roundIcon="@mipmap/ic_app_mes_only_circle"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
@@ -87,11 +87,13 @@
 
         <!-- <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" /> -->
 
-        <activity android:name=".ui.wallet_graphics.GraphicsActivity"></activity>
-        <activity android:name=".ui.sent_payments.SentPaymentsActivity"
-            android:label="@string/sent_payments"/>
+        <activity android:name=".ui.wallet_graphics.GraphicsActivity" />
+        <activity
+            android:name=".ui.sent_payments.SentPaymentsActivity"
+            android:label="@string/sent_payments" />
 
-        <service android:name=".messaging.OperationService"
+        <service
+            android:name=".messaging.OperationService"
             android:enabled="true">
             <intent-filter>
                 <action android:name="com.callforme.app.ACTION_ACCEPT_PAYMENT" />
@@ -99,6 +101,9 @@
             </intent-filter>
         </service>
 
+        <activity android:name=".ui.profile.ProfileActivity"
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:label="@string/account"/>
     </application>
 
 </manifest>
