--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
         <activity
-            android:name=".ui.main.MainActivity"
+            android:name=".ui.BlockActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
@@ -28,7 +28,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".ui.BlockActivity"
+        <activity android:name=".ui.main.MainActivity"
             android:label="@string/app_name"></activity>
 
         <activity
@@ -59,6 +59,7 @@
             android:label="@string/qr_code_scan" />
         <activity android:name=".ui.novelties.detail.NoveltyDetailActivity" />
         <activity android:name=".ui.info.WebViewActivity" />
+        <activity android:name=".ui.auth.register_web.WebViewRegisterActivity" />
         <activity
             android:name=".ui.payments.PaymentsActivity"
             android:label="@string/pending_payments" />
