--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
         <activity
             android:name=".ui.BlockActivity"
             android:label="@string/app_name"
-            android:windowSoftInputMode="stateAlwaysHidden">
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -29,51 +30,73 @@
         </activity>
 
         <activity android:name=".ui.main.MainActivity"
-            android:label="@string/app_name"></activity>
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"></activity>
 
         <activity
             android:name=".ui.entity_info.EntityInfoActivity"
-            android:label="@string/entity_info" />
+            android:label="@string/entity_info"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.intro.IntroActivity"
-            android:theme="@style/Theme.Intro" />
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.recipient_select.RecipientSelectActivity"
             android:label="@string/select_recipient"
-            android:windowSoftInputMode="stateAlwaysHidden" />
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.auth.login.LoginActivity"
-            android:windowSoftInputMode="stateAlwaysHidden" />
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.auth.register.RegisterActivity"
-            android:windowSoftInputMode="stateAlwaysHidden" />
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.auth.register_web.RegisterWebActivity"
-            android:label="@string/new_register" />
+            android:label="@string/new_register"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.new_payment.NewPaymentActivity"
             android:label="@string/new_payment"
-            android:windowSoftInputMode="stateAlwaysHidden" />
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.barcode.BarcodeActivity"
             android:label="@string/qr_code_scan" />
-        <activity android:name=".ui.novelties.detail.NoveltyDetailActivity" />
-        <activity android:name=".ui.info.WebViewActivity" />
-        <activity android:name=".ui.auth.register_web.WebViewRegisterActivity" />
+        <activity android:name=".ui.novelties.detail.NoveltyDetailActivity"
+            android:screenOrientation="portrait" />
+        <activity android:name=".ui.info.WebViewActivity"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ui.auth.register_web.WebViewRegisterActivity"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.payments.PaymentsActivity"
-            android:label="@string/pending_payments" />
+            android:label="@string/pending_payments"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.transactions.TransactionsActivity"
-            android:label="@string/transactions" />
+            android:label="@string/transactions"
+            android:screenOrientation="portrait"/>
         <activity
             android:name=".ui.entity_info.gallery.GalleryFullScreenActivity"
             android:configChanges="orientation|screenSize"
-            android:theme="@style/AppTheme.NoActionBar.FullScreen" />
+            android:theme="@style/AppTheme.NoActionBar.FullScreen"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".ui.get_boniatos.GetBoniatosActivity"
             android:label="@string/get_boniatos"
-            android:windowSoftInputMode="stateAlwaysHidden" /> <!-- [START firebase_service] -->
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:screenOrientation="portrait" />
+
+        <activity
+            android:name=".ui.profile.ProfileActivity"
+            android:label="@string/account"
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:screenOrientation="portrait" />
+
+        <!-- [START firebase_service] -->
         <service android:name=".messaging.MyFirebaseMessagingService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
@@ -103,10 +126,6 @@
             </intent-filter>
         </service>
 
-        <activity
-            android:name=".ui.profile.ProfileActivity"
-            android:label="@string/account"
-            android:windowSoftInputMode="stateAlwaysHidden" />
     </application>
 
 </manifest>
