--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,8 +14,8 @@ android {
         applicationId "net.mercadosocial.moneda"
         minSdkVersion 17
         targetSdkVersion 28
-        versionCode 204
-        versionName "2.0.4"
+        versionCode 210
+        versionName "2.1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         multiDexEnabled true //important
@@ -62,8 +62,6 @@ dependencies {
 //    implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
 
     implementation 'com.squareup.picasso:picasso:2.5.2'
-    implementation 'org.osmdroid:osmdroid-android:6.0.1'
-    implementation 'com.github.MKergall:osmbonuspack:6.3'
     implementation 'agency.tango.android:material-intro-screen:0.0.5'
     implementation 'com.karumi:dexter:5.0.0'
     implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
@@ -78,6 +76,8 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-vision:11.8.0'
     implementation 'com.google.android.gms:play-services-places:16.0.0'
+    implementation 'com.google.android.gms:play-services-maps:16.1.0'
+    implementation 'com.google.maps.android:android-maps-utils:0.5'
 
     implementation('com.crashlytics.sdk.android:crashlytics:2.9.6') {
         transitive = true
