--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,14 @@
 buildscript {
     repositories {
         google()
-        maven {
-            url 'https://maven.fabric.io/public'
-        }
         jcenter()
 
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.6.3'
+        classpath 'com.android.tools.build:gradle:4.1.1'
         classpath 'me.tatarka:gradle-retrolambda:3.2.4'
         classpath 'com.google.gms:google-services:4.0.1'
-        classpath 'io.fabric.tools:gradle:1.31.1'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.3.0'
 
 
         // NOTE: Do not place your application dependencies here; they belong
