--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity
             android:name=".ui.main.MainActivity"
             android:label="@string/app_name"
+            android:exported="true"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden">
             <intent-filter>
@@ -125,7 +126,8 @@
             android:screenOrientation="portrait"
             tools:replace="screenOrientation" />
 
-        <service android:name=".messaging.MyFirebaseMessagingService">
+        <service android:name=".messaging.MyFirebaseMessagingService"
+            android:exported="true">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
@@ -136,7 +138,8 @@
             android:value="@string/google_geo_apikey" /> <!-- <meta-data android:name="firebase_crashlytics_collection_enabled" android:value="false" /> -->
         <service
             android:name=".messaging.OperationService"
-            android:enabled="true">
+            android:enabled="true"
+            android:exported="false">
             <intent-filter>
                 <action android:name="net.mercadosocial.moneda.ACTION_ACCEPT_PAYMENT" />
                 <action android:name="net.mercadosocial.moneda.ACTION_REJECT_PAYMENT" />
