- Added two extra entities filters, withBenefits and acceptsEtics - Added desugaring and viewbinding - removed progressbar from entities list

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,9 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility = '1.8'
-        targetCompatibility = '1.8'
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+        coreLibraryDesugaringEnabled true
     }
     lint {
         abortOnError false
@@ -40,6 +41,7 @@ android {
     }
     namespace 'net.mercadosocial.moneda'
 
+    viewBinding.enabled = true
 }
 
 
@@ -108,6 +110,8 @@ dependencies {
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
     implementation "androidx.lifecycle:lifecycle-compiler:$lifecycle_version"
+
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
 }
 
