- added new MES info screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -136,6 +136,11 @@
             android:screenOrientation="portrait"
             tools:replace="screenOrientation" />
 
+        <activity
+            android:name=".ui.info.InfoMesActivity"
+            android:screenOrientation="portrait"
+            tools:replace="screenOrientation" />
+
         <service android:name=".messaging.MyFirebaseMessagingService"
             android:exported="true">
             <intent-filter>
