removed obsolete code to fix gradle issues

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,2 +1,1 @@
-include ':app', ':materialbarcodescanner'
-project(':materialbarcodescanner').projectDir = new File('app/libs/materialbarcodescanner')
+include ':app'
