--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+
 buildscript {
+
+//    plugins {
+//        id 'com.google.gms.google-services' version '4.4.1' apply false
+//    }
+
     repositories {
         google()
         jcenter()
@@ -8,7 +14,7 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:8.3.0'
-        classpath 'com.google.gms:google-services:4.3.15'
+        classpath 'com.google.gms:google-services:4.4.1'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.6'
 
 
