--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@
 
 buildscript {
 
+    ext.kotlin_version = '1.9.22'
+
 //    plugins {
 //        id 'com.google.gms.google-services' version '4.4.1' apply false
 //    }
@@ -16,6 +18,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:8.4.1'
         classpath 'com.google.gms:google-services:4.4.1'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.6'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
 
         // NOTE: Do not place your application dependencies here; they belong
