- fixed activity titles not being translated automatically - minor bugfixes

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,7 +64,7 @@
             android:screenOrientation="portrait" />
         <activity
             android:name=".ui.entity_info.EntityInfoActivity"
-            android:label="@string/entity_info"
+            android:label="@string/entity_information"
             android:screenOrientation="portrait" />
         <activity android:name=".ui.intro.IntroActivity"
             android:screenOrientation="portrait" />
